# PiCamStream

./: .gitignore  LICENSE  README.md  frontend-prompt.md  generate_certs.sh  install.sh  install_dependencies.sh  install_service.sh  main.py  pyproject.toml  test_mjpeg_timing.py  test_stream_timing.py
picam_client/: __init__.py  capture.py  config.py  isp_settings.py  settings_server.py  stream.py
